--- a/Template/login/login.html
+++ b/Template/login/login.html
@@ -33,6 +33,20 @@
   <div class="login-logo">
     <a href="../../index2.html"><b>Solufin</b> Cheques</a>
   </div>
+  {% if form.errors %}
+    {% for field in form %}
+      {% for error in field.errors %}
+      <div class="alert alert-danger">
+      <strong>{{ error|escape }}</strong>
+      </div>
+      {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+      <div class="alert alert-danger">
+      <strong>{{ error|escape }}</strong>
+      </div>
+    {% endfor %}
+  {% endif %}
   <!-- /.login-logo -->
   <div class="login-box-body">
    <p class="login-box-msg">Pide al administrador una cuenta para iniciar sesion.</p>
