--- a/Template/base.html
+++ b/Template/base.html
@@ -7,6 +7,8 @@
   <title>Dashboard</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
+  <link rel="stylesheet" href="{% static 'css/mycustom.css'  %}">
   <!-- Bootstrap 3.3.7 -->
   <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
   <!-- Font Awesome -->
