Registro Cliente Terminado

--- a/Template/cliente/registrar_cliente.html
+++ b/Template/cliente/registrar_cliente.html
@@ -53,11 +53,11 @@
 
 						<div class="row">
 
-							<div class="form-group col-md-2">
+							<div class="form-group col-md-2" id="Apellido">
 								<label for="id_PrimerApellido">Apellido/s</label>
 								{{form.PrimerApellido}}
 							</div>
-							<div class="form-group col-md-2">
+							<div class="form-group col-md-2" id="Nombre">
 								<label for="id_PrimerNombre">Nombre/s</label>
 								{{form.PrimerNombre}}
 							</div>
@@ -65,15 +65,15 @@
 								<label for="id_NombreCompleto">Nombre Completo</label>
 								{{form.NombreCompleto}}
 							</div>
-							<div class="form-group col-md-2">
+							<div class="form-group col-md-2" id="id_FechaNacimiento">
 								<label for="id_FechaNacimiento">Fecha de Nacimiento</label>
 								{{form.FechaNacimiento}}
 							</div>
-							<div class="form-group col-md-2">
+							<div class="form-group col-md-2" id="Genero">
 								<label for="id_Genero">Genero</label>
 								{{form.Genero}}
 							</div>
-							<div class="form-group col-md-2">
+							<div class="form-group col-md-2" id="EstadoCivil">
 								<label for="id_EstadoCivil">Estado Civil</label>
 								{{form.EstadoCivil}}
 							</div>
@@ -120,7 +120,7 @@
 							</div>
 						</div>
 
-						<div class="row">
+						<div class="row" id="Trabajo">
 							<div class="form-group col-md-2">
 								<label for="id_ComprobanteIngreso">Comprobante de Ingreso</label>
 								{{form.ComprobanteIngreso}}
