--- a/Template/base.html
+++ b/Template/base.html
@@ -138,6 +138,15 @@
             <li><a href="{% url 'registrar_cliente' %}"><i class="fa fa-pencil"></i>Registrar</a></li>
           </ul>
         </li>
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-money"></i>
+            <span>Propuesta</span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="{% url 'registrar_cliente' %}"><i class="fa fa-pencil"></i>Registrar</a></li>
+          </ul>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
