inicio del modulo propuesta

--- a/Template/base.html
+++ b/Template/base.html
@@ -125,7 +125,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li class="active"><a href="{% url 'index' %}"><i class="fa fa-circle-o"></i>Home</a></li>
+            <li class="active"><a href="{% url 'index' %}"><i></i>Home</a></li>
           </ul>
         </li>
         <!-- Item 2 -->
@@ -144,7 +144,7 @@
             <span>Propuesta</span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="{% url 'registrar_cliente' %}"><i class="fa fa-pencil"></i>Registrar</a></li>
+            <li><a href="{% url 'registrar_propuesta' %}"><i class="fa fa-pencil"></i>Registrar</a></li>
           </ul>
         </li>
       </ul>
