--- a/Template/propuesta/propuesta.html
+++ b/Template/propuesta/propuesta.html
@@ -1,5 +1,57 @@
 {% extends "base.html" %}
 
 {% block contenido %}
-	
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="box box-primary">
+				<div class="box-header with-border">
+					<h3 class="box-title">Registrar Propuesta de Operacion</h3>
+				</div>
+				  {% if form.errors %}
+				    {% for field in form %}
+				      {% for error in field.errors %}
+				      <div class="alert alert-danger">
+				      <strong>{{ error|escape }}</strong>
+				      </div>
+				      {% endfor %}
+				    {% endfor %}
+				    {% for error in form.non_field_errors %}
+				      <div class="alert alert-danger">
+				      <strong>{{ error|escape }}</strong>
+				      </div>
+				    {% endfor %}
+				  {% endif %}
+				<!-- /.box-header -->
+				<!-- form start -->
+				<form method="POST" role="form">
+					<div class="box-body">
+						{% csrf_token %}
+						<div class="row">
+														<div class="form-group col-md-3">
+								{{propuesta}}
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-md-12">
+								<label for="id_NroCliente">Cliente</label>
+								{{propuesta.NroCliente}}
+							</div>
+							<div class="form-group col-md-12">
+								<label for="id_NombreCliente">Nombre y Apellido</label>
+								{{propuesta.NombreCliente}}
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-md-2">
+								<button type="submit" class="btn btn-primary btn-lg">Guardar</button>
+							</div>
+						</div>
+					</div>
+					<!-- /.box-body -->
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
