--- a/Template/propuesta/propuesta.html
+++ b/Template/propuesta/propuesta.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block contenido %}
 <div class="container">
 	<div class="row">
@@ -28,19 +28,69 @@
 					<div class="box-body">
 						{% csrf_token %}
 						<div class="row">
-														<div class="form-group col-md-3">
-								{{propuesta}}
-							</div>
-						</div>
-						<div class="row">
-							<div class="form-group col-md-12">
+							<div class="form-group col-md-2">
 								<label for="id_NroCliente">Cliente</label>
 								{{propuesta.NroCliente}}
 							</div>
-							<div class="form-group col-md-12">
+							<div class="form-group col-md-2">
+								<label for="id_Apellido">Apellido</label>
+								{{propuesta.Apellido}}
+							</div>
+							<div class="form-group col-md-2">
+								<label for="id_Nombre">Nombre</label>
+								{{propuesta.Nombre}}
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-md-2">
+								<label for="id_NroCliente">Cliente</label>
+								{{propuesta.NroCliente}}
+							</div>
+							<div class="form-group col-md-3">
 								<label for="id_NombreCliente">Nombre y Apellido</label>
 								{{propuesta.NombreCliente}}
 							</div>
+							<div class="form-group col-md-3">
+								<label for="id_SectorEconomico">Sector Economico</label>
+								{{propuesta.SectorEconomico}}
+							</div>
+							<div class="form-group col-md-2">
+								<label for="id_Telefono">Telefono</label>
+								{{propuesta.Telefono}}
+							</div>
+							<div class="form-group col-md-2">
+								<label for="id_DireccionLibre">Direccion</label>
+								{{propuesta.DireccionLibre}}
+							</div>
+							<div class="form-group col-md-4">
+								<label for="id_Garantia">Garantia</label>
+								{{propuesta.Garantia}}
+							</div>
+							<div class="form-group col-md-4">
+								<label for="id_Moneda">Moneda</label>
+								{{propuesta.Moneda}}
+							</div>
+							<div class="form-group col-md-4">
+								<label for="id_Modalidad">Modalidad</label>
+								{{propuesta.Modalidad}}
+							</div>
+							<div class="form-group col-md-4">
+								<label for="id_Destino">Destino</label>
+								{{propuesta.Destino}}
+							</div>
+							<div class="form-group col-md-4">
+								<label for="id_Tasa">Tasa</label>
+								{{propuesta.Tasa}}
+							</div>
+							<div class="form-group col-md-4">
+								<label for="id_Comision">Comision</label>
+								{{propuesta.Comision}}
+							</div>
+						</div>
+
+						<!-- CHEQUES -->
+						<div class="row">
+							
 						</div>
 						<div class="row">
 							<div class="form-group col-md-2">
@@ -54,4 +104,24 @@
 		</div>
 	</div>
 </div>
+<div class="modal fade" id="getModal1" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">No coincide con ningun registro...</h4>
+      </div>
+      <div class="modal-body">
+        <h3><p>Cliente no existe&hellip;</p></h3>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+{% endblock %}
+
+{% block MiJs %}
+<script src="{% static 'js/propuesta.js' %}"></script>
 {% endblock %}
