--- a/Template/propuesta/propuesta.html
+++ b/Template/propuesta/propuesta.html
@@ -3,10 +3,10 @@
 {% block contenido %}
 <div class="row">
 	<form method="POST" role="form" id="OperacionForm">
-		<div class="col-md-6">
+		<div class="col-md-12">
 			<div class="box box-primary">
 				<div class="box-header with-border">
-				<h3 class="box-title">Registrar Propuesta de Operacion</h3>
+					<h3 class="box-title">Registrar Propuesta de Operacion</h3>
 				</div>
 					{% if propuesta.errors %}
 					{% for field in propuesta %}
@@ -26,69 +26,66 @@
 					<!-- form start -->
 				<div class="box-body">
 					{% csrf_token %}
-					<div class="form-group">
-					<label for="id_NroAgente">Agente</label>
-					{{propuesta.NroAgente}}
+					<div class="form-group col-md-3">
+						<label for="id_NroAgente">Agente</label>
+						{{propuesta.NroAgente}}
 					</div>
-					<div class="form-group">
-					<label for="id_NombreAgente">Nombre y Apellido</label>
-					{{propuesta.NombreAgente}}
+					<div class="form-group col-md-3">
+						<label for="id_NombreAgente">Nombre y Apellido</label>
+						{{propuesta.NombreAgente}}
 					</div>
-					<div class="form-group">
-					<label for="id_NroCliente">Cliente</label>
-					{{propuesta.NroCliente}}
+					<div class="form-group col-md-3">
+						<label for="id_NroCliente">Cliente</label>
+						{{propuesta.NroCliente}}
 					</div>
-					<div class="form-group">
-					<label for="id_NombreCliente">Nombre y Apellido</label>
-					{{propuesta.NombreCliente}}
+					<div class="form-group col-md-3">
+						<label for="id_NombreCliente">Nombre y Apellido</label>
+						{{propuesta.NombreCliente}}
 					</div>
-					<div class="form-group">
-					<label for="id_SectorEconomico">Sector Economico</label>
-					{{propuesta.SectorEconomico}}
+					<div class="form-group col-md-3">
+						<label for="id_SectorEconomico">Sector Economico</label>
+						{{propuesta.SectorEconomico}}
 					</div>
-					<div class="form-group">
-					<label for="id_Telefono">Telefono</label>
-					{{propuesta.Telefono}}
+					<div class="form-group col-md-3">
+						<label for="id_Telefono">Telefono</label>
+						{{propuesta.Telefono}}
 					</div>
-					<div class="form-group">
-					<label for="id_DireccionLibre">Direccion</label>
-					{{propuesta.DireccionLibre}}
+					<div class="form-group col-md-3">
+						<label for="id_DireccionLibre">Direccion</label>
+						{{propuesta.DireccionLibre}}
 					</div>
-					<div class="form-group">
-					<label for="id_Garantia">Garantia</label>
-					{{propuesta.Garantia}}
+					<div class="form-group col-md-3">
+						<label for="id_Garantia">Garantia</label>
+						{{propuesta.Garantia}}
 					</div>
-					<div class="form-group">
-					<label for="id_Moneda">Moneda</label>
-					{{propuesta.Moneda}}
+					<div class="form-group col-md-3">
+						<label for="id_Moneda">Moneda</label>
+						{{propuesta.Moneda}}
 					</div>
-					<div class="form-group">
-					<label for="id_Modalidad">Modalidad</label>
-					{{propuesta.Modalidad}}
+					<div class="form-group col-md-3">
+						<label for="id_Modalidad">Modalidad</label>
+						{{propuesta.Modalidad}}
 					</div>
-					<div class="form-group">
-					<label for="id_Destino">Destino</label>
-					{{propuesta.Destino}}
+					<div class="form-group col-md-3">
+						<label for="id_Destino">Destino</label>
+						{{propuesta.Destino}}
 					</div>
-					<div class="form-group">
-					<label for="id_Tasa">Tasa</label>
-					{{propuesta.Tasa}}
+					<div class="form-group col-md-3">
+						<label for="id_Tasa">Tasa</label>
+						{{propuesta.Tasa}}
 					</div>
-					<div class="form-group">
-					<label for="id_Comision">Comision</label>
-					{{propuesta.Comision}}
-					</div>
-					<div class="form-group">
-					<button type="submit" class="btn btn-primary btn-lg">Guardar</button>
+					<div class="form-group col-md-3">
+						<label for="id_Comision">Comision</label>
+						{{propuesta.Comision}}
 					</div>
 				</div>
 				<!-- /.box-body -->
 			</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-12">
 			<div class="box box-primary">
 				<div class="box-header with-border">
-					<h3 class="box-title">Agregar Cheques</h3>
+					<div><h3 class="box-title">Agregar Cheques</h3></div>
 				</div>
 				{% if propuesta.errors %}
 					{% for field in propuesta %}
@@ -106,8 +103,67 @@
 				{% endif %}
 				<!-- /.box-header -->
 				<div class="box-body">
-					{{cheque}}
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="box">
+            <div class="box-header">
+              <h3 class="box-title">Hover Data Table</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body table-responsive no-padding">
+              <table id="example2" class="table table-bordered table-hover table-striped dataTable">
+                <thead class="thead-dark">
+                <tr>
+                  <th>Librador</th>
+                  <th>Banco</th>
+                  <th>N° Cuenta</th>
+                  <th>N° Cheque</th>
+                  <th>Monto</th>
+                  <th>Emision</th>
+                  <th>Pago</th>
+                  <th>Agregar</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                  {% for ch in cheque %}
+                  	<td>{{ch.Librador}}</td>
+                  	<td>{{ch.Banco}}</td>
+                  	<td>{{ch.NroCuenta}}</td>
+                  	<td>{{ch.NroCheque}}</td>
+                  	<td>{{ch.monto}}</td>
+                  	<td>{{ch.F_Emision}}</td>
+                  	<td>{{ch.F_Pago}}</td>
+                  	<td><a href="#" class="btn btn-block btn-success">+</a></td>
+                  {% endfor %}
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                  <th>Librador</th>
+                  <th>Banco</th>
+                  <th>N° Cuenta</th>
+                  <th>N° Cheque</th>
+                  <th>Monto</th>
+                  <th>Emision</th>
+                  <th>Pago</th>
+                </tr>
+                </tfoot>
+              </table>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
 				</div>
+			</div>
+		</div>
+		<div class="col-md-12">
+			<div class="form-group">
+				<button type="submit" class="btn btn-primary btn-lg">Guardar</button>
 			</div>
 		</div>
 	</form>
