--- a/Template/propuesta/propuesta.html
+++ b/Template/propuesta/propuesta.html
@@ -102,62 +102,55 @@
 					{% endfor %}
 				{% endif %}
 				<!-- /.box-header -->
-				<div class="box-body">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="box">
-            <div class="box-header">
-              <h3 class="box-title">Hover Data Table</h3>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body table-responsive no-padding">
-              <table id="example2" class="table table-bordered table-hover table-striped dataTable">
-                <thead class="thead-dark">
-                <tr>
-                  <th>Librador</th>
-                  <th>Banco</th>
-                  <th>N° Cuenta</th>
-                  <th>N° Cheque</th>
-                  <th>Monto</th>
-                  <th>Emision</th>
-                  <th>Pago</th>
-                  <th>Agregar</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                  {% for ch in cheque %}
-                  	<td>{{ch.Librador}}</td>
-                  	<td>{{ch.Banco}}</td>
-                  	<td>{{ch.NroCuenta}}</td>
-                  	<td>{{ch.NroCheque}}</td>
-                  	<td>{{ch.monto}}</td>
-                  	<td>{{ch.F_Emision}}</td>
-                  	<td>{{ch.F_Pago}}</td>
-                  	<td><a href="#" class="btn btn-block btn-success">+</a></td>
-                  {% endfor %}
-                </tr>
-                </tbody>
-                <tfoot>
-                <tr>
-                  <th>Librador</th>
-                  <th>Banco</th>
-                  <th>N° Cuenta</th>
-                  <th>N° Cheque</th>
-                  <th>Monto</th>
-                  <th>Emision</th>
-                  <th>Pago</th>
-                </tr>
-                </tfoot>
-              </table>
-            </div>
-            <!-- /.box-body -->
-          </div>
-          <!-- /.box -->
-        </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.row -->
+				<div class="box-body table-responsive">
+		            <div>
+		            	{{ cheque.management_form }}
+		            </div>
+					<table id="example2" class="table table-bordered table-hover table-striped">
+						<thead>
+							<tr>
+								<th>Librador</th>
+								<th>Banco</th>
+								<th>N° Cuenta</th>
+								<th>N° Cheque</th>
+								<th>Monto</th>
+								<th>Emision</th>
+								<th>Pago</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr id="{{ cheque.prefix }}-row" class="dynamic-form">
+								{% for ch in cheque %}
+								<td>{{ch.Librador}}</td>
+								<td>{{ch.Banco}}</td>
+								<td>{{ch.NroCuenta}}</td>
+								<td>{{ch.NroCheque}}</td>
+								<td>{{ch.monto}}</td>
+								<td>{{ch.Emision}}</td>
+								<td>{{ch.Pago}}</td>
+								<td {% if forloop.first %} class="hidden" {% endif %}>
+								<a id="remove-{{ form.prefix }}-row" href="javascript:void(0)" class="delete-row btn btn-block btn-danger"><i class="fa fa-minus"></i></a>
+								</td>
+								{% endfor %}
+							</tr>
+							<tr>
+								<td><a href="javascript:void(0)" class="add-row btn btn-block btn-success"><i class="fa fa-plus-square"></i></a>
+								</td>
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr>
+								<th>Librador</th>
+								<th>Banco</th>
+								<th>N° Cuenta</th>
+								<th>N° Cheque</th>
+								<th>Monto</th>
+								<th>Emision</th>
+								<th>Pago</th>
+							</tr>
+						</tfoot>
+					</table>
 				</div>
 			</div>
 		</div>
